[package]
name = "ethereum-address"
version = "0.6.0"
authors = ["Michał Papierski <michal@papierski.net>, Justin Kilpatrick <justin@althea.net>, Tiago Carvalho <tiago@heliax.dev>"]
autotests = true
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Ethereum address type"
repository = "https://github.com/heliaxdev/ethereum-address"
license-file = "LICENSE-MIT"
edition = "2021"

[dependencies]
serde = "1.0"
sha3 = "0.10"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
